python/tests/gold/tracingexternalauthtest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tracingexternalauthtest\",\"scope\":\"AmbassadorTest\",\"service\":\"tracingexternalauthtest-admin\"},\"name\":\"tracingexternalauthtest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"tracingexternalauthtest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"tracingex [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:30Z",
                    "labels": {
                        "kat-ambassador-id": "tracingexternalauthtest",
                        "scope": "AmbassadorTest",
                        "service": "tracingexternalauthtest-admin"
                    },
                    "name": "tracingexternalauthtest-admin",
                    "namespace": "default",
                    "resourceVersion": "61343",
                    "selfLink": "/api/v1/namespaces/default/services/tracingexternalauthtest-admin",
                    "uid": "2600207a-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.109.91.66",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "tracingexternalauthtest-admin",
                            "nodePort": 31199,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "tracingexternalauthtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tracingexternalauthtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"tracingexternalauthtest-ahttp-auth\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selecto [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:33Z",
                    "labels": {
                        "kat-ambassador-id": "tracingexternalauthtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tracingexternalauthtest-ahttp-auth",
                    "namespace": "default",
                    "resourceVersion": "61392",
                    "selfLink": "/api/v1/namespaces/default/services/tracingexternalauthtest-ahttp-auth",
                    "uid": "27c9381c-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.110.89.116",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "tracingexternalauthtest-ahttp-auth"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Mapping\nname: tracing_target_mapping\nprefix: /target/\nservice: tracingexternalauthtest-http\nambassador_id: tracingexternalauthtest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: tracing_target_mapping\\nprefix: /target/\\nservice: tracingexternalauthtest-http\\nambassador_id: tracingexternalauthtest\\n\"},\"labels\":{\"kat-ambassador-id\":\"tracingexternalauthtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"tracingexternalauthtest-http\" [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:32Z",
                    "labels": {
                        "kat-ambassador-id": "tracingexternalauthtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tracingexternalauthtest-http",
                    "namespace": "default",
                    "resourceVersion": "61382",
                    "selfLink": "/api/v1/namespaces/default/services/tracingexternalauthtest-http",
                    "uid": "2716c997-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.101.210.58",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8132
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8495
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tracingexternalauthtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"zipkin-auth\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":9411,\"targetPort\":\"http\"}],\"selector\":{\"app\":\"zipkin-auth\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-10T16:56:30Z",
                    "labels": {
                        "kat-ambassador-id": "tracingexternalauthtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "zipkin-auth",
                    "namespace": "default",
                    "resourceVersion": "61360",
                    "selfLink": "/api/v1/namespaces/default/services/zipkin-auth",
                    "uid": "266a4493-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.101.177.4",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30894,
                            "port": 9411,
                            "protocol": "TCP",
                            "targetPort": "http"
                        }
                    ],
                    "selector": {
                        "app": "zipkin-auth"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: TracingService\nname: tracing-auth\nservice: zipkin-auth:9411\ndriver: zipkin\nambassador_id: tracingexternalauthtest\n\n---\napiVersion: ambassador/v0\nkind: AuthService\nname: tracingexternalauthtest-ahttp-auth\nauth_service: \"tracingexternalauthtest-ahttp-auth\"\npath_prefix: \"/extauth\"\nallowed_headers:\n- Requested-Status\n- Requested-Header\nambassador_id: tracingexternalauthtest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: TracingService\\nname: tracing-auth\\nservice: zipkin-auth:9411\\ndriver: zipkin\\nambassador_id: tracingexternalauthtest\\n\\n---\\napiVersion: ambassador/v0\\nkind: AuthService\\nname: tracingexternalauthtest-ahttp-auth\\nauth_service: \\\"tracingexternalauthtest-ahttp-auth\\ [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:29Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "tracingexternalauthtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tracingexternalauthtest",
                    "namespace": "default",
                    "resourceVersion": "61336",
                    "selfLink": "/api/v1/namespaces/default/services/tracingexternalauthtest",
                    "uid": "25cf0e2b-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.108.214.65",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 32449,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32726,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "tracingexternalauthtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
